--- a/templates/appMR/bug_detail.html
+++ b/templates/appMR/bug_detail.html
@@ -26,7 +26,7 @@
                             </div>
                             <div class="row bg-light justify-content-center">
                                 <div class="form-group col-md-12 justify-content-center">
-                                    <input class="btn btn-primary ml-auto" type="submit" value="Submit" />
+                                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
                                 </div>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
                 <form action="{% url 'appMR:post_comment_view' bug_id=bug_id %}" method="post">
                     {% csrf_token %}
                     {{ comment_form|crispy }}
-                    <input class="btn btn-primary ml-auto" type="submit" value="Submit" />
+                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
                 </form>
             </div>
         </div>
