--- a/templates/appMR/bug_list.html
+++ b/templates/appMR/bug_list.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="row bg-light justify-content-center">
                                 <div class="form-group col-md-12 justify-content-center">
-                                    <input class="btn btn-primary ml-auto" type="submit" value="Submit" />
+                                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
                                 </div>
                             </div>
                         </div>
