--- a/templates/appMR/bug_list.html
+++ b/templates/appMR/bug_list.html
@@ -16,6 +16,7 @@
                                 <div class="form-group col-md-12">
                                     {{ form.title|as_crispy_field}}
                                     {{ form.description|as_crispy_field }}
+                                    {{ form.attachment|as_crispy_field }}
                                 </div>
                             </div>
                             <div class="row bg-light justify-content-center">
