--- a/templates/appMR/bug_detail.html
+++ b/templates/appMR/bug_detail.html
@@ -23,7 +23,8 @@
                                     {% endif %}
                                     {% if bug.attachment %}
                                     <div>
-                                        <img src="{{ bug.attachment.url }}" style="max-width: 150px; max-height: 150px;" />
+                                        <img src="{{ bug.attachment.url }}"
+                                             style="max-width: 150px; max-height: 150px;"/>
                                     </div>
                                     {% endif %}
                                     Time submitted: {{ form.instance.timestamp }}
@@ -31,7 +32,7 @@
                             </div>
                             <div class="row bg-light justify-content-center">
                                 <div class="form-group col-md-12 justify-content-center">
-                                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
+                                    <input class="btn btn-primary ml-auto" type="submit" value="Save"/>
                                 </div>
                             </div>
                         </div>
@@ -54,7 +55,7 @@
                             {{ comment.comment }}
                             {% if comment.attachment %}
                             <div>
-                                <img src="{{ comment.attachment.url }}" style="max-width: 150px; max-height: 150px;" />
+                                <img src="{{ comment.attachment.url }}" style="max-width: 150px; max-height: 150px;"/>
                             </div>
                             {% endif %}
                         </div>
@@ -63,10 +64,11 @@
                 {% endfor %}
             </div>
             <div>
-                <form action="{% url 'appMR:post_comment_view' bug_id=bug_id %}" enctype="multipart/form-data" method="post">
+                <form action="{% url 'appMR:post_comment_view' bug_id=bug_id %}" enctype="multipart/form-data"
+                      method="post">
                     {% csrf_token %}
                     {{ comment_form|crispy }}
-                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
+                    <input class="btn btn-primary ml-auto" type="submit" value="Save"/>
                 </form>
             </div>
         </div>
