--- a/templates/appMR/bug_list.html
+++ b/templates/appMR/bug_list.html
@@ -21,7 +21,7 @@
                             </div>
                             <div class="row bg-light justify-content-center">
                                 <div class="form-group col-md-12 justify-content-center">
-                                    <input class="btn btn-primary ml-auto" type="submit" value="Save" />
+                                    <input class="btn btn-primary ml-auto" type="submit" value="Save"/>
                                 </div>
                             </div>
                         </div>
@@ -34,55 +34,55 @@
         <div>
             {% if open == 0 %}
             <h3>Your Open Tickets
-                <a href="{% url 'appMR:change_bug_list_view' ticket_type=open %}" class="btn btn-primary">Closed</a>
+                <a class="btn btn-primary" href="{% url 'appMR:change_bug_list_view' ticket_type=open %}">Closed</a>
             </h3>
             {% else %}
             <h3>Your Closed Tickets
-                <a href="{% url 'appMR:change_bug_list_view' ticket_type=open %}" class="btn btn-primary">Open</a>
+                <a class="btn btn-primary" href="{% url 'appMR:change_bug_list_view' ticket_type=open %}">Open</a>
             </h3>
             {% endif %}
         </div>
         <table class="table">
             <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Title</th>
-                    {% if dev %}
-                    <th scope="col">Reporter</th>
-                    {% endif %}
-                    <th scope="col">Status</th>
-                    <th scope="col">Timestamp</th>
-                    <th scope="col"></th>
-                </tr>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Title</th>
+                {% if dev %}
+                <th scope="col">Reporter</th>
+                {% endif %}
+                <th scope="col">Status</th>
+                <th scope="col">Timestamp</th>
+                <th scope="col"></th>
+            </tr>
             </thead>
             <tbody>
-                {% if open == 0 %}
-                {% for o in bug_list %}
-                <tr>
-                    <th scope="row">{{ o.id }}</th>
-                    <td>{{ o.title }}</td>
-                    {% if dev %}
-                    <td>{{ o.reporter }}</td>
-                    {% endif %}
-                    <td>{{ o.get_status_display }}</td>
-                    <td>{{ o.timestamp }}</td>
-                    <td><a href="{% url 'appMR:bug_detail_view' id=o.id %}">View</a></td>
-                </tr>
-                {% endfor %}
-                {% else %}
-                {% for o in done_list %}
-                <tr>
-                    <th scope="row">{{ o.id }}</th>
-                    <td>{{ o.title }}</td>
-                    {% if dev %}
-                    <td>{{ o.reporter }}</td>
-                    {% endif %}
-                    <td>{{ o.get_status_display }}</td>
-                    <td>{{ o.timestamp }}</td>
-                    <td><a href="{% url 'appMR:bug_detail_view' id=o.id %}">View</a></td>
-                </tr>
-                {% endfor %}
+            {% if open == 0 %}
+            {% for o in bug_list %}
+            <tr>
+                <th scope="row">{{ o.id }}</th>
+                <td>{{ o.title }}</td>
+                {% if dev %}
+                <td>{{ o.reporter }}</td>
                 {% endif %}
+                <td>{{ o.get_status_display }}</td>
+                <td>{{ o.timestamp }}</td>
+                <td><a href="{% url 'appMR:bug_detail_view' id=o.id %}">View</a></td>
+            </tr>
+            {% endfor %}
+            {% else %}
+            {% for o in done_list %}
+            <tr>
+                <th scope="row">{{ o.id }}</th>
+                <td>{{ o.title }}</td>
+                {% if dev %}
+                <td>{{ o.reporter }}</td>
+                {% endif %}
+                <td>{{ o.get_status_display }}</td>
+                <td>{{ o.timestamp }}</td>
+                <td><a href="{% url 'appMR:bug_detail_view' id=o.id %}">View</a></td>
+            </tr>
+            {% endfor %}
+            {% endif %}
             </tbody>
         </table>
     </div>
