Major quality and performance improvements, in need of testing.

--- a/templates/app_mr/base.html
+++ b/templates/app_mr/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
-    <title>AppMR Support Center</title>
+    <title>app_mr Support Center</title>
 
     <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css' rel='stylesheet'>
 
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'appMR:index' %}">AppMR Support Center</a>
+        <a class="navbar-brand" href="{% url 'app_mr:index' %}">app_mr Support Center</a>
     </div>
     <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbarResponsive" data-toggle="collapse" type="button">
