--- a/templates/app_mr/bug_detail.html
+++ b/templates/app_mr/bug_detail.html
@@ -7,7 +7,7 @@
             <h3>Edit Ticket - {{ bug_id }}</h3>
         </div>
         <div>
-            <form action="{% url 'appMR:bug_detail_view' ticket_id=bug_id %}" enctype="multipart/form-data" method="post">
+            <form action="{% url 'app_mr:bug_detail_view' ticket_id=bug_id %}" enctype="multipart/form-data" method="post">
                 {% csrf_token %}
                 <div class="container">
                     <div class="row justify-content-center">
@@ -64,7 +64,7 @@
                 {% endfor %}
             </div>
             <div>
-                <form action="{% url 'appMR:post_comment_view' bug_id=bug_id %}" enctype="multipart/form-data"
+                <form action="{% url 'app_mr:post_comment_view' bug_id=bug_id %}" enctype="multipart/form-data"
                       method="post">
                     {% csrf_token %}
                     {{ comment_form|crispy }}
